[old ui] fix unread message count from breaking nav alignment
Fixes: CNVS-27527

test plan:
- as a user with the old ui and unread messages in your inbox
- navigate to the dashboard and look at the upper-right
  nav links - are they aligned?

  example: http://screencast.com/t/kQGa92JcxJE

Reviewed-on: https://gerrit.instructure.com/73002
Tested-by: Jenkins
Product-Review: Colleen Palmer <colleen@instructure.com>
Product-Review: Chris Hart <chart@instructure.com>
QA-Review: Myller de Araujo <myller@instructure.com>

--- a/app/stylesheets/base/_#header.scss
+++ b/app/stylesheets/base/_#header.scss
@@ -107,8 +107,9 @@ $masquerade-link-color: $ic-color-alert;
       color: white;
       float: left;
       line-height: 1em;
-      margin: 5px 8px 5px 0;
+      margin: 5px 8px 7px 0;
       padding-left: 8px;
+      padding-top: 5px;
 
     &.first, &#identity-help-container {
       border-left: none;
@@ -142,7 +143,11 @@ $masquerade-link-color: $ic-color-alert;
       }
     }
     .unread-messages-count {
-      @include ic-badge-maker;
+      @include ic-badge-maker(
+      14px);
+      padding: 1px 5px;
+      vertical-align: top;
+      margin-top: -2px;
     }
   }
   #identity-help-container a {
